[package]
name = "ironlog"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/heety313/ironlog"

[lib]
name = "ironlog"
path = "src/lib.rs"

[[bin]]
name = "ironlog"
path = "src/bin/main.rs"


[dependencies]
log = { version = "0.4.22", features = ["std"] }
chrono = "0.4"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.8.0"
include_dir = "0.7.3"  # Add this for embedding static files
rocket-include-dir = "1.1.0"